Thu Oct 28 09:52:32 2010                        Michael Jennings (mej)

Misc. fixes/cleanups to query execution.
----------------------------------------------------------------------