@@ -77,7 +77,7 @@ wwinfo($)
     if (exists($info{"$var"})) {
         return($info{"$var"});
     } else {
-        &lprint(DEBUG, "Requested an unknown paramater\n");
+        &dprint("Requested an unknown paramater\n");
     }
 
     return();
@@ -92,7 +92,7 @@ wwpath($)
     if (exists($path{"$var"})) {
         return($path{"$var"});
     } else {
-        &lprint(DEBUG, "Requested an unknown paramater\n");
+        &dprint("Requested an unknown paramater\n");
     }
 
     return();
